# underground

./: .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  alembic.ini  checkout.py  expire.py  genpromos.py  migrate.py  products.json  pyproject.toml  requirements.txt  run.py  setup.cfg  tables.sql
.github/workflows/: run-tests.yml
alembic/: env.py
alembic/versions/: 2024-01-21_init.py  2024-01-27_update_user.py  2024-01-27_update_user_settings.py  2024-01-29_update_user.py  2024-01-30_added_user_settings_and_discounts.py  2024-02-05_update_activeserver.py  2024-02-26_added_payment.py  2024-02-29_update.py  2024-03-01_update_user.py  2024-03-02_update_user.py  2024-03-02_update_user_settings.py  2024-03-03_init_payment.py  2024-03-06_update_active_server.py  2024-03-19_update_user.py  2024-03-21_update_user_email.py  2024-03-30_delete_payment.py  2024-03-30_init.py  2024-04-23_added_node.py  2024-04-23_updated_node.py  2024-04-23_updated_server.py  2024-04-23_updated_server_model.py  2024-04-27_init.py  2024-05-01_added_vnc_port_column_to_server_model.py  2024-05-16_updated_server_model.py
contrib/: Dockerfile  PKGBUILD
contrib/monero/: monero-wallet-rpc.service  monero_test_wallet_rpc_run  monero_wallet_rpc_run  run-test.sh  run.sh  tx  tx.sh
contrib/nginx/sites-available/: underground.conf  underground.pm-be.conf  underground.pm.conf
contrib/openrc/: monero-test-wallet-rpc  monero-wallet-rpc  underground  underground.pm
contrib/systemd/: monero-test-wallet-rpc.service  monero-wallet-rpc.service  underground.pm-be.service  underground.pm.service  underground.service
migrations/: env.py
migrations/versions/: 7e1587a71765_updated_users.py  ba1bd8cad205_init.py
requirements/: base.txt  dev.txt
src/: arguments.py  config.py  crud.py  database.py  exceptions.py  logger.py  mail.py  main.py  models.py  utils.py
src/auth/: manager.py  models.py  password.py  router.py  schemas.py  utils.py
src/display/: exceptions.py  filters.py  router.py  utils.py
src/node/: crud.py  models.py  router.py  schemas.py
src/payment/: crud.py  models.py  payments.py  router.py  schemas.py  utils.py
src/server/: crud.py  iso-pool.xml  models.py  payments.py  router.py  rpc.py  schemas.py  utils.py  vds.py  vps.py  vps.xml
src/server/xml/: iso-pool.xml  server-cdrom.xml  vps.xml
src/user/: crud.py  models.py  router.py  schemas.py  utils.py
static/css/: main.css
static/noVNC/: package-lock.json
templates/: base.html  blog.html  change-password.html  checkout.html  dashboard.html  delete-account.html  error.html  faq.html  index.html  install.html  login.html  promo.html  register.html  upgrade.html  vnc.html
tests/: conftest.py  test_auth.py  test_display_router.py  test_endpoints.py  test_server_crud.py
underground/: checkout.py  config.py  database.py  exceptions.py  expire.py  main.py  models.py
underground.pm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
underground/auth/: router.py  utils.py
underground/display/: router.py  utils.py
underground/payment/: router.py  utils.py
underground/routers/: auth.py  display.py  payment.py  server.py
underground/server/: router.py  utils.py
underground/static/css/: main.css
underground/templates/: balance.html  base.html  dashboard.html  error.html  index.html  install.html  login.html  promo.html  register.html  upgrade.html  vnc.html
underground/tests/: conftest.py  test_auth.py  test_display_router.py
underground/utils/: auth.py  payment.py
